2012-02-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	  src/SDCCast.h,
	  src/SDCCast.c (decorateType, processParms, checkPtrCast, copyAstValues):
	  fixed bug #3438706

2012-02-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-pr39339.c:
	  Fixed bug #3486544.

2012-02-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-pr43236.c,
	  support/regression/tests/gcc-torture-execute-20090113-1.c:
	  Fixed bugs #3486543 and #3487324.

2012-02-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c (findSymWithLevel),
	  src/SDCCast.c (resolveSymbols, processBlockVars): fixed bugs 3403429,
	  3153215, 3107914 
	* support/regression/tests/bug3403429.c: enabled test

2012-02-18 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr44468.c,
	  support/regression/tests/gcc-torture-execute-pr43438.c,
	  support/regression/tests/gcc-torture-execute-pr45034.c:
	  Disable tests for older gcc.

2012-02-17 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/divunsigned.s,
	  device/lib/z180/divunsigned.s,
	  device/lib/r2k/divunsigned.s:
	  Remove some leftover code for handling division by zero (patch by parerga, #3488149).

2012-02-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr37924.c:
	  Fix gcc compilation failure.

2012-02-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-r2k.def:
	  Use some peepholes useful when omitting the frame pointer from z80 for r2k.
	* src/z80/gen.c:
	  Improve code generation for r2k when omitting frame pointer, enable use of ld iy, hl on r2k.

2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/include/opcode/sparc.h,
	  support/sdbinutils/include/aout/sun4.h:
	  added for NetBSD/sparc64 bfd build

2012-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>